--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ h3{
     margin-top: 5px;
     margin-bottom: 0px;
 }
+
+p.intro{
+    padding-top: 15px;
+}
 p#resumeDL{
     text-align: center;
     margin-top: 5px;
@@ -72,12 +76,7 @@ ul#heading li{
     padding: 10px;
     font-size: 18px;
 }
-hr{
-    width: 90%;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
+
 ul.ext{
     list-style-type: square;
     margin: auto;
@@ -138,12 +137,12 @@ div#digiWork{
     padding-right: 50px;
     font-size: 18px;
     text-align: justify;
-    width: 65%;
+    width: 50%;
     float: left;
     overflow:hidden;
 }
 div#image{
-    width: 20%;
+    width: 25%;
     min-width: 150px;
     float: left;
     margin-right:50px;
@@ -243,6 +242,7 @@ div.affiliation{
 }
 
 hr{
+    width: 85%;
     margin:0.05in;
     /*padding-left:0px;*/
     /*box-align:left;*/
