--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h2{
 }
 h3{
    
-    color: #556B2F;
+    color: #3b4e1b;
     font-size: 22px !important;
     text-align: left;
     text-decoration: underline;     
