--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@ body{
 }
 div.bigBox{
     margin: 0;
-    padding: 30px;
+    padding: 30px; 
+    display: flex;
+    flex-wrap: wrap;        /* allows items to go to next line when too tight */
+    align-items: flex-start;
+    font-family: "roboto";
 }
 
 h1{
@@ -16,12 +20,16 @@ h1{
     margin-bottom: 2px;
 }
 h2{
-    color: #556B2F;
+    color: #ffffff;
+    background-color: #4d6f29;
+    font-weight: bold;
     font-size: 28px !important;
     text-align: left;
     padding-top: 10px;
-    margin-bottom: 0px;
-    margin-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    margin-bottom: 10px;
+    margin-top: 40px;
 }
 h3{
    
@@ -35,11 +43,13 @@ h3{
 }
 
 p{
-    font-size: 16px !important;
+    font-size: 20px !important;
     margin: auto;
 }
 p.intro{
-    padding-top: 15px;
+    font-size: 22px !important;
+    padding-top: 5px;
+    padding-bottom: 10px;
 }
 p#TAIntro{
     margin-top:15px;
@@ -75,16 +85,7 @@ p#TAIntro{
     outline-width: thick;
     outline-color: #97A3A1;
 }
-ul#headingIndex li{
-    display: inline;
-    padding: 5px;
-    font-size: 16px;
-}
-ul#heading li{
-    display: inline;
-    padding: 10px;
-    font-size: 18px;
-}
+
 
 img{
     /*border: 5px solid #6D6875;*/
@@ -129,15 +130,17 @@ div#digiWork{
     outline-width: thick;
     outline-color: #6D6875;*/
     padding-left: 0.05in;
-    padding-right: 50px;
-    font-size: 18px;
+    padding-right: 30px;
+    font-size: 20px;
     text-align: justify;
-    width: 60%;
+    flex: 2.5 1 0;  
+    min-width: 350px;
     float: left;
     overflow:hidden;
 }
 div#image{
-    width: 25%;
+    /* 2:1 ratio vs image on wide screens */
+    flex: 1 1 0;           
     min-width: 150px;
     float: left;
     margin-right:50px;
@@ -209,13 +212,15 @@ a:hover{
 
 div.title {
     line-height: 105%;
-    font-size: 55px;
+    font-size: 75px;
     font-weight: bold;
+    font-family: "roboto";
     color: #556B2F;
+    padding-bottom: 6pt;
     margin-top: 12.0pt;
-    margin-right: .3in;
+    margin-right: .1in;
     margin-left: .3in;
-    margin-bottom: .0001pt;
+    margin-bottom: 0pt;
 }
 
 div.affiliation{
@@ -235,7 +240,7 @@ hr{
     /*box-align:left;*/
     background-color:#003000;
 }
-​
+
 ul.res{
     list-style-type: circle;
 }
@@ -247,12 +252,65 @@ ul.TA{
 
 li.wide {
     margin-bottom: 20px;
-    font-size: 16px !important;
+    font-size: 20px !important;
      
 }
 
 li.narrow{
     margin-bottom: 5px;
-    font-size: 16px !important;
+    font-size: 20px !important;
+}
+
+.navbar {
+    background-color: #2f4a16;       /* dark green bar */
+    font-family: "roboto";
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 40px;              /* controls overall bar height */
+    margin-left: .3in;
+    margin-right: .1in;
+}
+
+/* Links inside the nav bar */
+.navbar .nav-link {
+    background-color: #2f4a16;       /* same as bar by default */
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 6px 18px;               /* rectangle size */
+    border-radius: 4px;              /* small rounded corners */
+    border: 1px solid transparent;
+    display: inline-flex;
+    align-items: center;
+    transition: background-color 0.2s ease, border-color 0.2s ease;
+}
+
+/* Override global link styles for nav links */
+.navbar .nav-link:link,
+.navbar .nav-link:visited {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+/* Hover: slightly lighter background */
+.navbar .nav-link:hover {
+    background-color: #3f5e20;       /* slightly lighter green */
+    text-decoration: none;
+}
+
+/* Active page: slightly different background + bold text */
+.navbar .nav-link.active {
+    background-color: #4d6f29;       /* a bit lighter than bar */
+    font-weight: bold;
+}
+
+/* Optional: visible keyboard focus */
+.navbar .nav-link:focus-visible {
+    outline: 2px solid #ffffff;
+    outline-offset: 2px;
 }
 
